More work in the Future Works section.

--- a/docs/tech_report/tech_report.tex
+++ b/docs/tech_report/tech_report.tex
@@ -37,17 +37,19 @@ Baltimore, MD, 21250\\
 
 \section{Motivation}
 
-The gossip protocol dictates that nodes on the network select other nodes in the network to share information.  The information shared is small and the sharing is not necessarily bidirectional.  A node may have information it wishes to send off to other nodes in the network; a rumor.  As each node in the network learns the rumor it then finds other nodes to tell.  At each step in the rumor-spreading, the state of one or both of the nodes changes.  Within $O(\lg N)$ steps all nodes should know the rumor.  There are many variations in the system which can determine the effectiveness of the gossip system.  These variables include: what a node does if it pings a node that already knows the rumor; what a node does if it has been waiting around--should it ask if there is a rumor; whether the node choices are random from the network or from a neighbor list \cite{Birm2007}.
+The gossip protocol dictates that nodes on the network select other nodes in the network to share information.  The information shared is typically small and the sharing is not necessarily bidirectional.  A node may have information it wishes to send off to other nodes in the network; a rumor.  As each node in the network learns the rumor it then finds other nodes to tell.  At each step in the rumor-spreading, the state of one or both of the nodes changes.  Within $O(\lg N)$ steps all nodes should know the rumor.  There are many variations in the system which can determine the effectiveness of the gossip system.  These variables include: what a node does if it pings a node that already knows the rumor; what a node does if it has been waiting around--should it ask if there is a rumor; whether the node choices are random from the network or from a neighbor list \cite{Birm2007}.
 
-Erlang provides a stable distributed system and development environment.  Therefore it is a good choice for developing applications that utilize the gossip protocol.  However, it does have a strange limitation with the memory management system whereby all parameters to the recursive functions required are copied at each call.  This downside makes Erlang a more suitable choice for rapid prototyping a system versus building a final program \cite{Erlang}.
+Erlang provides a stable distributed system and development environment.  Therefore it is a good choice for developing applications that utilize the gossip protocol.  However, it does have a limitation with the memory management system whereby all parameters to the recursive functions required are copied at each call{\bf \em{ Is this true?}}.  This downside makes Erlang a more suitable choice for rapid prototyping a system versus building a final program \cite{Erlang}.
 
 \section{Background}
 
-Gossip protocol systems do not strictly compute aggregate calculations, but also disseminate information.  A system can manage data replicas as well as routing tables with gossip.  Nodes can use simple communication with other randomly selected nodes whereby one or both nodes change state after the information exchange.  These systems benefit from small communication requirements and do not require reliable communication.  Aggregate problems also converge in $O(\lg N)$ time to an estimate of the calculation.  These calculations can be anything that is composable, such as the average, variance, count.  Gossip can also estimate some problems that require complete knowledge (hollistic problems) \cite{Birm2007}.
+{\bf {\em Need to make sure I listed the three types, rumor-mongering, etc.}}
+
+Gossip protocol systems do not strictly compute aggregate calculations, but can also disseminate information.  A system can manage data replicas as well as routing tables with gossip.  Nodes can use simple communication with other randomly selected nodes whereby one or both nodes change state after the information exchange.  These systems benefit from small communication requirements and do not require reliable communication.  Aggregate problems also converge in $O(\lg N)$ time to an estimate of the calculation.  These calculations can be anything that is composable, such as the average, variance, count.  Gossip can also estimate some problems that require complete knowledge (hollistic problems) \cite{Birm2007}.
 
 \subsection{Erlang as a Distributed Environment}
 
-Erlang was developed by Ericsson for robust, real-time concurrent systems.  Interprocess communication is abstracted away into a rather simple system to aid development.  Also, because Erlang is a functional language all code is written to run recursively.  Parameters are copied at each function call in the recursion which makes it unsuitable for developing systems which require larger data structures.  Erlang provides a simple platform for developing concurrent code.  Each process is spawned to run a function, similarly to fork()ing processes in a standard system or spawning threads.  A running system supports code modules being recompiled and injected without stopping the system \cite{Erlang}.
+Erlang was developed by Ericsson for robust, real-time concurrent systems.  Interprocess communication is abstracted away into a rather simple system to aid development.  Also, because Erlang is a functional language all code is written to run recursively {\bf {\em Is this true?}}.  Parameters are copied at each function call in the recursion which makes it unsuitable for developing systems which require larger data structures {\bf {\em Is this true?}}.  Erlang provides a simple platform for developing concurrent code.  Each process is spawned to run a function, similarly to fork()ing processes in a standard system or spawning threads.  A running system supports code modules being recompiled and injected without stopping the system, which aids in real-time upgrades and debugging \cite{Erlang}.
 
 \section{Early Experiments}
 
@@ -55,7 +57,7 @@ Before determining which problem to address with the gossip protocol, we built s
 
 \subsection{Variables}
 
-Developing a distributed system involves tweaking certain system parameters.  If nodes seek rumors during run-time this can change the time required for complete knowledge or solution convergence.  Simultaneously, this may not be required.  When a node interacts with another node that already knows the rumor the node can quit spreading the rumor or initiating interactions.  However, if too many nodes quit too quickly then the rumor can die out before all the nodes know.  Therefore, there is tweaking in whether or not a node should quit at this point; not just the binary notion but there can be a range using probability and random numbers.  If a node contacts another node that knows the rumor (assuming they're spreading rumors) it can roll a die to determine whether it should quit.  This variable has a very strong impact on the amount of messages sent as well as how many nodes end up ignorant of the rumor.  How many iterations of the gossiping the system completes may be unknown, therefore having the nodes self terminate can be ideal.  If our experiments we modified how likely a node was to quit spreading the rumor and did not have nodes seeking rumors.
+Developing a distributed system involves tweaking certain system parameters.  If nodes seek rumors during run-time this can change the time required for complete knowledge or solution convergence.  Simultaneously, this may not be required.  When a node interacts with another node that already knows the rumor the node can quit spreading the rumor or initiating interactions.  However, if too many nodes quit too quickly then the rumor can die out before all the nodes know.  Therefore, there is tweaking in whether or not a node should quit at this point; not just the binary notion but there can be a range using probability and random number generators.  If a node contacts another node that knows the rumor (assuming they're spreading rumors) it can roll a die to determine whether it should quit.  This variable has a very strong impact on the amount of messages sent as well as how many nodes end up ignorant of the rumor.  How many iterations of the gossiping the system completes may be unknown, therefore having the nodes self terminate can be useful.  In our experiments we modified how likely a node was to quit spreading the rumor, but did not have nodes seeking rumors.
 
 \subsection{Epidemic Rumor Spreading}
 
@@ -93,7 +95,7 @@ Building spanning trees with gossip is fairly robust and runs quickly.  However,
 
 \subsection{Calculating the Average}
 
-Provided that a set of N nodes all have some value $\chi_i$ then to calculate the average of the values in the network.  Each node will randomly chose another node in the network and share the values and then average.  This process is repeated until all the nodes in the network have the same value; which should be the average.  If a node is in a state where it doesn't seek other nodes and hears from a node with a different value it starts finding other nodes.  It looks like prj\_avg does just transmission of value.  Prj\_avg2 does a pair-wise value transmission.  Both projects quit seeking new numbers based on a dice roll after they find a node that matches another.  If the averaging is done by strictly pinging other nodes with your value then it doesn't follow the gossip pair-wise communication; but also the last guy at the end will have to time out.  This timeout is necessary because eventually no one will ping the remaining node.  With pair-wise proper communication this extra time out is unnecessary.
+Provided that a set of N nodes all have some value $\chi_i$.  To calculate the average of the values in the network, each node will randomly chose another node in the network and share the values and then average.  This process is repeated until all the nodes in the network have the same value; which should be the average.  It was more practical in our experiments to not seek equality, but rather some $\epsilon$ of each other.  If a node is in a state where it doesn't seek other nodes and hears from a node with a different value it starts finding other nodes.  It looks like prj\_avg does just transmission of value.  Prj\_avg2 does a pair-wise value transmission.  Both projects quit seeking new numbers based on a dice roll after they find a node that matches another.  If the averaging is done by strictly pinging other nodes with your value then it doesn't follow the gossip pair-wise communication; but also the last guy at the end will have to time out.  This timeout is necessary because eventually no one will ping the remaining node.  With pair-wise proper communication this extra time out is unnecessary.
 
 Presently, if you're in KnowDontTell and you get a hello from another value you respond with yours and do nothing.  I should change it so that if the values don't match you start seeking guys again.
 
@@ -103,7 +105,7 @@ Add average table or chart; this experiment will examine error based on how quic
 
 The goal of our Tic-Tac-Toe gossip algorithm is to simulate a population of people learning how to play Tic-Tac-Toe.  We start with a population of people with no tic-tac-toe strategy and one person that wants to play.  A person only knows the rules for tic-tac-toe and how to contact the other players.  Each game starts with one person requesting a game by sending his strategy to another person.  The person that receives the strategy then plays a game of Tic-Tac-Toe with themselves as player 1 and the requesting person as player 2.  After the game is over the strategy and record of both players are updated and both players then look for someone else to play a game with.  Each player continues to request games until they stop losing, then they stop asking other people to play.
 
-Each player represents their strategy as a series of snapshots of a board, along with the move for that snapshot.  When checking a board against their strategy all reflections and rotations are checked in order to minimize the number of snapshots needed to store.  After each game the strategies of the two players are modified in the following way.  If one of the players wins both players first remove the moves of the losing player from their strategy, then add the moves from the winning player into their strategy.  When there is a draw both players keep the moves from the second player, and no moves are removed.  The wins, losses, and draws are updated for each player after each game.  If the player loses its wins, losses, and draws are reset to zero in order to make checking for the stoping strategy easier.
+Each player represents their strategy as a series of snapshots of a board, along with the move for that snapshot.  When checking a board against their strategy all reflections and rotations are checked in order to minimize the number of snapshots needed to store.  After each game the strategies of the two players are modified in the following way.  If one of the players wins both players first remove the moves of the losing player from their strategy, then add the moves from the winning player into their strategy.  When there is a draw both players keep the moves from the second player, and no moves are removed.  The wins, losses, and draws are updated for each player after each game.  If the player loses: its wins, losses, and draws are reset to zero in order to make checking for the stoping strategy easier.
 
 Given two nodes: $i$ \& $j$ in the set of nodes.  Node$i$ randomly choses a node$j$ to play Tic-Tac-Toe with.  $X$ is the set of moves, whereby $X[i]$ is the set of moves for node$i$.  The following algorithm describes this interaction:
 
@@ -180,9 +182,7 @@ The moves are random if there is no matching move in their set.
 
 \section{Future Work}
 
-Other learning that can be handled with gossip in a similar way.
-
-Intelligent systems can process raw data and build analytics cooperatively.
+In this system the nodes work together with gossip to reach a shared goal.  This approach that many nodes collectively and interactively work towards a shared goal can be applied to problems other than learning game strategies.  Further work can address how much interaction is required for certain systems to progress.  This approach can be applied to intelligent systems which process raw data to build analyzers.  The nodes can exchange these analyzers or processes with each other to build a better data processor.
 
 Query processing of data spread across the nodes.  They can gossip the query and their answer to it.  Cumulatively.
 
