my final commit.

--- a/docs/tech_report/tech_report.tex
+++ b/docs/tech_report/tech_report.tex
@@ -82,7 +82,7 @@ Probability & Total Messages & DontKnow\\
 
 \subsection{Spanning Tree Building}
 
-Similary starting with the root node, "node1."  Each node in state KnowAndTell contacts other nodes at random and if they are not in the tree they become children of that node.  To ensure that this process terminates, if a node contacts another node already in the tree then this node will stop trying to find new children with certain probability.  A first version of this program has each node only track their parent.  This approach has drawbacks.  A major drawback is that information cannot be easily passed down the tree; but it can be sent up the tree.  However, it is more capable of sending information up the tree.  If you want to give all nodes information, then the nodes have to periodically ping their parent.  A second version of this program has each node tracking all children.  This requires more storage space on the nodes and doesn't scale well to large networks.  A hybrid version wherein, both parents and children are tracked was not built.
+Similary starting with the root node, "node1."  Each node in state KnowAndTell contacts other nodes at random and if they are not in the tree they become children of that node.  To ensure that this process terminates, if a node contacts another node already in the tree then this node will stop trying to find new children with certain probability.  A first version of this program has each node only track their parent.  This approach has drawbacks.  A major drawback is that information cannot be easily passed down the tree.  However, it is more capable of sending information up the tree.  If you want to give all nodes information, then the nodes have to periodically ping their parent.  A second version of this program has each node tracking all children.  This requires more storage space on the nodes and doesn't scale well to large networks.  A hybrid version wherein, both parents and children are tracked was not built.
 
 Because the testing machine can only emulate concurrency to a point, if too many nodes are used in the experiments programs then the trees will be very tall and thin with each node only having one child.  This is due to the sequential execution of the concurrent processes.  Each process picks a node at random and then the next process has a chance to execute, but the previous process may not have another chance to run again for a while--because of the seemlingly round-robin approach.  As each of the processes starts up and executes it finds a child and then may not run again for quite a while.
 
@@ -90,13 +90,13 @@ Building spanning trees with gossip is fairly robust and runs quickly.  However,
 
 \subsection{Calculating the Average}
 
-Provided that a set of N nodes all have some value $\chi_i$.  To calculate the average of the values in the network, each node will randomly chose another node in the network and share the values and then average.  This process is repeated until all the nodes in the network have the same value; which should be the average.  It was more practical in our experiments to not seek equality, but rather some $\epsilon$ of each other.  If a node is in a state where it doesn't seek other nodes and hears from a node with a different value it starts finding other nodes.  Our first model just transmits their value to the other node--kind of like bullying it.  The second model does a pair-wise value transmission.  Both projects quit seeking new numbers based on a dice roll after they find a node that matches another.  With the first project eventually everyone stops, but one node will remain seeking out other nodes.  This final node has to have a built-in timeout mechanism.  This timeout is necessary because eventually no one will ping the remaining node.  With pair-wise proper communication this extra time out is unnecessary.
+Provided that a set of N nodes all have some value $\chi_i$.  To calculate the average of the values in the network, each node will randomly chose another node in the network and share the values and then average.  This process is repeated until all the nodes in the network have the same value; which should be the average.  It was more practical in our experiments to not seek equality, but rather some $\epsilon$ of each other.  If a node is in a state where it doesn't seek other nodes and hears from a node with a different value it starts finding other nodes.  Our first model just transmits their value to the other node--similar to bullying it.  The second model does a pair-wise value transmission.  Both projects quit seeking new numbers based on a dice roll after they find a node that matches another.  With the first project eventually everyone stops, but one node will remain seeking out other nodes.  This final node has to have a built-in timeout mechanism.  This timeout is necessary because eventually no one will ping the remaining node.  With pair-wise proper communication this extra time out is unnecessary.
 
 Running several iterations of the models with varying behavior towards stopping provided interesting results.  Upon completion from a number of messages sent by each node; the nodes all were within 1.0 of each other.  This range allowed for us to set the $\epsilon$ to 1.0.  Within a reasonable number of iterations the nodes all converged.  Proving the number of steps for this was unimportant for our final and target project; Learning the Perfect Tic-Tac-Toe Strategy.
 
 \section{Learning the Perfect Tic-Tac-Toe Strategy}
 
-The goal of our Tic-Tac-Toe gossip algorithm is to simulate a population of people learning how to play Tic-Tac-Toe.  We start with a population of people with no tic-tac-toe strategy and one person that wants to play.  A person only knows the rules for tic-tac-toe and how to contact the other players.  Each game starts with one person requesting a game by sending his strategy to another person.  The person that receives the strategy then plays a game of Tic-Tac-Toe with themselves as player 1 and the requesting person as player 2.  After the game is over the strategy and record of both players are updated and both players then look for someone else to play a game with.  Each player continues to request games until they stop losing, then they stop asking other people to play.
+The goal of our Tic-Tac-Toe gossip algorithm is to simulate a population of people learning how to play Tic-Tac-Toe.  We start with a population of nodes with no tic-tac-toe strategy and one node that wants to play.  A node only knows the rules for tic-tac-toe and how to contact the other players.  Each game starts with one node requesting a game by sending his strategy to another node.  The player that receives the strategy then plays a game of Tic-Tac-Toe with themselves as player 1 and the requesting node as player 2.  After the game is over the strategy and record of both players are updated and both players then look for someone else to play a game with.  Each player continues to request games until they stop losing, then they stop asking other nodes to play.
 
 Each player represents their strategy as a series of snapshots of a board, along with the move for that snapshot.  When checking a board against their strategy all reflections and rotations are checked in order to minimize the number of snapshots needed to store.  After each game the strategies of the two players are modified in the following way.  If one of the players wins both players first remove the moves of the losing player from their strategy, then add the moves from the winning player into their strategy.  When there is a draw both players keep the moves from the second player, and no moves are removed.  The wins, losses, and draws are updated for each player after each game.  If the player loses: its wins, losses, and draws are reset to zero in order to make checking for the stoping strategy easier.
 
