apparently this is the last.

--- a/docs/tech_report/tech_report.tex
+++ b/docs/tech_report/tech_report.tex
@@ -156,8 +156,7 @@ Figure \ref{fig:500nodes_windraw} displays the total wins and draws of a populat
 % Not sure why it won't place the image across both columns
 \begin{figure*}[h]
 \centering\includegraphics[keepaspectratio=true,scale=0.85]{500nodes_winsdrawpergames.png}
-
-\caption{500 nodes}
+\caption{Wins and Draws for 500 Nodes Over the Course of Learning}
 \label{fig:500nodes_windraw}
 \end{figure*}
 
